// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genConformanceReport > matches snapshot at AA 1`] = `
"# Design system conformance report

**Subject:** the UIcockpit design system as configured below
**Target level:** WCAG 2.2 AA
**Assessed on:** 2026-01-01
**Method:** self-assessment, automated tooling (see Instruments)

---

## What this document is, and is not

This is a conformance report **for a design system**. It is the kind of artefact a
supplier hands over during procurement so a buyer can see what the building
material guarantees.

**It is not an accessibility statement.** The European Accessibility Act and the
Web Accessibility Directive require a statement about a *service*: which
organisation runs it, which parts are not accessible and why, how someone reports
a problem, and which body enforces it. Only you can write that. This report is
evidence you can cite inside it, for the part of your service that is this design
system.

**Using components that conform does not make a service conform.** Most
accessibility failures live in content, structure, journeys and the assembly of
components — none of which this document covers.

---

## Scope

Everything in this report applies to the kit at exactly this configuration.
Change a setting and the contrast figures change; the structural findings
(landmarks, names, keyboard behaviour, reading order) do not.

| Setting | Value |
|---|---|
| Conformance | WCAG AA |
| Colour theme | cobalt |
| Brand colour | #0A84FF |
| Mode | light |
| Scale | default |
| Text size | md |
| Surface | outlined |
| Border | subtle |
| Background | neutral |

---

## Results

### Measured live, for the configuration above

All 20 audited colour relationships meet their required ratio.

| Relationship | Measured | Required | |
|---|---|---|---|
| Body text on background | 18.32:1 | 4.5:1 | Pass |
| Body text on surface | 19.38:1 | 4.5:1 | Pass |
| Body text on raised surface | 19.38:1 | 4.5:1 | Pass |
| Body text on overlay | 19.38:1 | 4.5:1 | Pass |
| Muted text on background | 7.98:1 | 4.5:1 | Pass |
| Muted text on surface-2 | 7.98:1 | 4.5:1 | Pass |
| Button text on primary | 4.63:1 | 4.5:1 | Pass |
| Button text on primary hover | 5.71:1 | 4.5:1 | Pass |
| Secondary button text | 14.19:1 | 4.5:1 | Pass |
| Success text on success-soft | 16.16:1 | 4.5:1 | Pass |
| Warning text on warning-soft | 17.22:1 | 4.5:1 | Pass |
| Danger text on danger-soft | 15.55:1 | 4.5:1 | Pass |
| Info text on info-soft | 15.86:1 | 4.5:1 | Pass |
| Danger text on surface | 5.46:1 | 4.5:1 | Pass |
| Link text on surface | 5.45:1 | 4.5:1 | Pass |
| Link hover on surface | 7.63:1 | 4.5:1 | Pass |
| Primary against background | 4.38:1 | 3:1 | Pass |
| Input border against background | 3.61:1 | 3:1 | Pass |
| Input border against its fill | 3.39:1 | 3:1 | Pass |
| Focus ring against background | 4.38:1 | 3:1 | Pass |


Targets meet the 24x24 minimum of SC 2.5.8. To reach the 44x44 of SC 2.5.5 — the level NL Design System raises to mandatory — set Conformance to AAA.


### Measured on the kit itself, by our continuous checks

These are properties of the components as shipped. They are not re-run for your
configuration; they are the tests the kit must pass before it is released.

| Instrument | What it checks | Scope | Result |
|---|---|---|---|
| axe-core 4.10.2 | WCAG 2.2 A + AA rule set, run against the RENDERED component gallery | 3 densities x 2 colour modes = 6 configurations, 1440px viewport | 0 violations |
| Target-size measurement | Rendered geometry of every interactive control, both axes | 250 controls at the AAA setting | 0 below 44x44 CSS px |
| Accessibility-tree walk (Chrome DevTools Protocol) | Computed roles, names, reading order, focus movement, landmarks | Heading outline, task list, toggletip, error summary, skip link, 567 interactive nodes | no findings |
| Configuration sweep | Every position of every control, against every contrast floor | 19 controls x 16 themes x 2 modes | no reachable setting breaks a floor |

Each is reproducible from the repository:

- \`npm run a11y:matrix\` — axe-core 4.10.2
- \`npm run a11y:matrix\` — Target-size measurement
- \`npm run a11y:tree\` — Accessibility-tree walk (Chrome DevTools Protocol)
- \`vitest src/tokens/__tests__/knobSweep.test.ts\` — Configuration sweep

---

## Success criteria addressed

Criteria the design system takes responsibility for. Everything not listed is
either not applicable to a component library, or is yours: content, media
alternatives, page titles, journeys, timing, and the assembly of these parts.

| Criterion | Level | How it is met |
|---|---|---|
| 1.4.1 Use of Colour | A | State is carried in text or shape as well as colour — status badges name their status, the character count changes its wording over the limit, requirement rules carry met/unmet in visually-hidden text. |
| 1.4.3 Contrast (Minimum) | AA | Every ink tier and every semantic text role is floored at 4.5:1 against the worst surface it can land on, in both polarities. Measured live for your configuration below. |
| 1.4.11 Non-text Contrast | AA | Input borders floored at 3:1 against both the field fill and the page. Focus ring floored at 3:1. Where a brand colour does not separate from the page, primary buttons receive a boundary rather than the brand being altered. |
| 2.1.1 Keyboard | A | No component depends on pointer input. Toggletip, menu, dialog and combobox are button-triggered and key-operable. |
| 2.4.1 Bypass Blocks | A | Skip link ships in the kit and is the first tab stop. |
| 2.4.7 Focus Visible | AA | A single focus treatment in the global layer, never removed by a component. |
| 2.4.11 Focus Not Obscured | AA | Sticky surfaces leave the focused element visible. |
| 2.5.7 Dragging Movements | AA | Every drag affordance has a single-pointer alternative. |
| 1.4.12 Text Spacing | AA | Under the four overrides the SC specifies (line-height 1.5, letter-spacing 0.12em, word-spacing 0.16em, paragraph spacing 2em) nothing clips. Scroll regions carry a two-line floor so a panel squeezed by grown chrome cannot collapse the part that holds the content. |
| 1.4.10 Reflow | AA | At 320 CSS px no component is wider than the box it is given. Grid tracks use minmax(0, …) so one unbreakable cell cannot drag a column past its share, and the month-with-events calendar falls back to day markers where an event title no longer fits. |
| 1.4.4 Resize Text | AA | At 200% root text size nothing clips and nothing is lost. Dialog and sheet scroll as a whole once their own title and footer no longer leave room for the body. |
| 3.3.1 Error Identification | A | Errors are named in text at the field and repeated in an error summary that moves focus to the control. |
| 3.3.2 Labels or Instructions | A | Visible labels above the field. Placeholder-as-label is not available: the floating-label recipes were removed. |
| 3.1.2 Language of Parts | AA | The language navigation names each option in its own language with lang and hreflang. |

### Criteria we own and do not yet meet

Listed by name, because a report that shows only what passes is an
advertisement, and because an accessibility statement has to declare
non-conforming content. Reproduce with: npm run a11y:css

| Criterion | Level | What fails |
|---|---|---|
| 2.5.8 Target Size (Minimum) | AA | One element, in one situation: a week-calendar appointment that CLASHES with another. Two appointments sharing a column divide it between them, and at container widths around 1120-1200px and below 830px the result is a button with only ~18 CSS px of unobscured width. Every other target in the kit passes, including under the SC’s spacing exception (522 passing). Reproduce with: npm run a11y:matrix |
| 2.5.5 Target Size (Enhanced) | AAA | Not claimed. The AAA conformance setting lifts the density ladder, which covers rows, buttons and fields, but it does not reach controls that size themselves — a slider track 3 px tall, a switch at 44x24, stepper chevrons at 24x44. Our own scan measures 163 of 459 targets under 44 px on an axis; that figure is a SIZE measurement and not a count of breaches, since it does not compute the spacing allowance. |

---

## Known limitations

- No testing with disabled users. Everything above is automated. GOV.UK names usability-with-disabled-users as a criterion a component must meet, and we have not met it — this is the largest gap between the ambition and the claim.
- No assistive-technology matrix. The tree walk reads the accessibility tree the platform exposes; it does not run JAWS, NVDA or VoiceOver, and those disagree with each other and with the tree.
- Automated tooling detects a minority of WCAG failures. Rule checkers are good at contrast, names and structure; they cannot judge whether a label is meaningful, whether an error message helps, or whether a flow can be completed.
- Scope is the design system, not your application. Content, page structure, media alternatives, forms you assemble and journeys you build are yours, and most accessibility failures live there.
- EN 301 549 currently harmonises WCAG 2.1 AA. We build and test to 2.2, which is stricter, but 2.2 is not yet the harmonised standard — do not cite it as the legal bar.

---

## Citing this in your own statement

A statement typically needs: the standard applied, the assessment method and
date, and a list of what is not accessible. For the design-system portion you can
say, adapting the wording to your situation:

> The user-interface components are built on the UIcockpit design system,
> assessed against WCAG 2.2 AA on 2026-01-01 by automated testing
> (axe-core, accessibility-tree inspection and rendered target-size measurement)
> across the standard
> configuration recorded in its conformance report. That assessment did not
> include testing with disabled users.

Keep the last sentence. It is the part that is true of almost every statement
filed, and the part most of them leave out.
"
`;

exports[`genConformanceReport > matches snapshot at AAA 1`] = `
"# Design system conformance report

**Subject:** the UIcockpit design system as configured below
**Target level:** WCAG 2.2 AA, plus 2.5.5 Target Size (AAA)
**Assessed on:** 2026-01-01
**Method:** self-assessment, automated tooling (see Instruments)

---

## What this document is, and is not

This is a conformance report **for a design system**. It is the kind of artefact a
supplier hands over during procurement so a buyer can see what the building
material guarantees.

**It is not an accessibility statement.** The European Accessibility Act and the
Web Accessibility Directive require a statement about a *service*: which
organisation runs it, which parts are not accessible and why, how someone reports
a problem, and which body enforces it. Only you can write that. This report is
evidence you can cite inside it, for the part of your service that is this design
system.

**Using components that conform does not make a service conform.** Most
accessibility failures live in content, structure, journeys and the assembly of
components — none of which this document covers.

---

## Scope

Everything in this report applies to the kit at exactly this configuration.
Change a setting and the contrast figures change; the structural findings
(landmarks, names, keyboard behaviour, reading order) do not.

| Setting | Value |
|---|---|
| Conformance | AA + AAA target size |
| Colour theme | cobalt |
| Brand colour | #0A84FF |
| Mode | light |
| Scale | default |
| Text size | md |
| Surface | outlined |
| Border | subtle |
| Background | neutral |

---

## Results

### Measured live, for the configuration above

All 20 audited colour relationships meet their required ratio.

| Relationship | Measured | Required | |
|---|---|---|---|
| Body text on background | 18.32:1 | 4.5:1 | Pass |
| Body text on surface | 19.38:1 | 4.5:1 | Pass |
| Body text on raised surface | 19.38:1 | 4.5:1 | Pass |
| Body text on overlay | 19.38:1 | 4.5:1 | Pass |
| Muted text on background | 7.98:1 | 4.5:1 | Pass |
| Muted text on surface-2 | 7.98:1 | 4.5:1 | Pass |
| Button text on primary | 4.63:1 | 4.5:1 | Pass |
| Button text on primary hover | 5.71:1 | 4.5:1 | Pass |
| Secondary button text | 14.19:1 | 4.5:1 | Pass |
| Success text on success-soft | 16.16:1 | 4.5:1 | Pass |
| Warning text on warning-soft | 17.22:1 | 4.5:1 | Pass |
| Danger text on danger-soft | 15.55:1 | 4.5:1 | Pass |
| Info text on info-soft | 15.86:1 | 4.5:1 | Pass |
| Danger text on surface | 5.46:1 | 4.5:1 | Pass |
| Link text on surface | 5.45:1 | 4.5:1 | Pass |
| Link hover on surface | 7.63:1 | 4.5:1 | Pass |
| Primary against background | 4.38:1 | 3:1 | Pass |
| Input border against background | 3.61:1 | 3:1 | Pass |
| Input border against its fill | 3.39:1 | 3:1 | Pass |
| Focus ring against background | 4.38:1 | 3:1 | Pass |


At this setting every interactive target is at least 44x44 CSS px. Density controls whitespace only.


### Measured on the kit itself, by our continuous checks

These are properties of the components as shipped. They are not re-run for your
configuration; they are the tests the kit must pass before it is released.

| Instrument | What it checks | Scope | Result |
|---|---|---|---|
| axe-core 4.10.2 | WCAG 2.2 A + AA rule set, run against the RENDERED component gallery | 3 densities x 2 colour modes = 6 configurations, 1440px viewport | 0 violations |
| Target-size measurement | Rendered geometry of every interactive control, both axes | 250 controls at the AAA setting | 0 below 44x44 CSS px |
| Accessibility-tree walk (Chrome DevTools Protocol) | Computed roles, names, reading order, focus movement, landmarks | Heading outline, task list, toggletip, error summary, skip link, 567 interactive nodes | no findings |
| Configuration sweep | Every position of every control, against every contrast floor | 19 controls x 16 themes x 2 modes | no reachable setting breaks a floor |

Each is reproducible from the repository:

- \`npm run a11y:matrix\` — axe-core 4.10.2
- \`npm run a11y:matrix\` — Target-size measurement
- \`npm run a11y:tree\` — Accessibility-tree walk (Chrome DevTools Protocol)
- \`vitest src/tokens/__tests__/knobSweep.test.ts\` — Configuration sweep

---

## Success criteria addressed

Criteria the design system takes responsibility for. Everything not listed is
either not applicable to a component library, or is yours: content, media
alternatives, page titles, journeys, timing, and the assembly of these parts.

| Criterion | Level | How it is met |
|---|---|---|
| 1.4.1 Use of Colour | A | State is carried in text or shape as well as colour — status badges name their status, the character count changes its wording over the limit, requirement rules carry met/unmet in visually-hidden text. |
| 1.4.3 Contrast (Minimum) | AA | Every ink tier and every semantic text role is floored at 4.5:1 against the worst surface it can land on, in both polarities. Measured live for your configuration below. |
| 1.4.11 Non-text Contrast | AA | Input borders floored at 3:1 against both the field fill and the page. Focus ring floored at 3:1. Where a brand colour does not separate from the page, primary buttons receive a boundary rather than the brand being altered. |
| 2.1.1 Keyboard | A | No component depends on pointer input. Toggletip, menu, dialog and combobox are button-triggered and key-operable. |
| 2.4.1 Bypass Blocks | A | Skip link ships in the kit and is the first tab stop. |
| 2.4.7 Focus Visible | AA | A single focus treatment in the global layer, never removed by a component. |
| 2.4.11 Focus Not Obscured | AA | Sticky surfaces leave the focused element visible. |
| 2.5.7 Dragging Movements | AA | Every drag affordance has a single-pointer alternative. |
| 1.4.12 Text Spacing | AA | Under the four overrides the SC specifies (line-height 1.5, letter-spacing 0.12em, word-spacing 0.16em, paragraph spacing 2em) nothing clips. Scroll regions carry a two-line floor so a panel squeezed by grown chrome cannot collapse the part that holds the content. |
| 1.4.10 Reflow | AA | At 320 CSS px no component is wider than the box it is given. Grid tracks use minmax(0, …) so one unbreakable cell cannot drag a column past its share, and the month-with-events calendar falls back to day markers where an event title no longer fits. |
| 1.4.4 Resize Text | AA | At 200% root text size nothing clips and nothing is lost. Dialog and sheet scroll as a whole once their own title and footer no longer leave room for the body. |
| 3.3.1 Error Identification | A | Errors are named in text at the field and repeated in an error summary that moves focus to the control. |
| 3.3.2 Labels or Instructions | A | Visible labels above the field. Placeholder-as-label is not available: the floating-label recipes were removed. |
| 3.1.2 Language of Parts | AA | The language navigation names each option in its own language with lang and hreflang. |

### Criteria we own and do not yet meet

Listed by name, because a report that shows only what passes is an
advertisement, and because an accessibility statement has to declare
non-conforming content. Reproduce with: npm run a11y:css

| Criterion | Level | What fails |
|---|---|---|
| 2.5.8 Target Size (Minimum) | AA | One element, in one situation: a week-calendar appointment that CLASHES with another. Two appointments sharing a column divide it between them, and at container widths around 1120-1200px and below 830px the result is a button with only ~18 CSS px of unobscured width. Every other target in the kit passes, including under the SC’s spacing exception (522 passing). Reproduce with: npm run a11y:matrix |
| 2.5.5 Target Size (Enhanced) | AAA | Not claimed. The AAA conformance setting lifts the density ladder, which covers rows, buttons and fields, but it does not reach controls that size themselves — a slider track 3 px tall, a switch at 44x24, stepper chevrons at 24x44. Our own scan measures 163 of 459 targets under 44 px on an axis; that figure is a SIZE measurement and not a count of breaches, since it does not compute the spacing allowance. |

---

## Known limitations

- No testing with disabled users. Everything above is automated. GOV.UK names usability-with-disabled-users as a criterion a component must meet, and we have not met it — this is the largest gap between the ambition and the claim.
- No assistive-technology matrix. The tree walk reads the accessibility tree the platform exposes; it does not run JAWS, NVDA or VoiceOver, and those disagree with each other and with the tree.
- Automated tooling detects a minority of WCAG failures. Rule checkers are good at contrast, names and structure; they cannot judge whether a label is meaningful, whether an error message helps, or whether a flow can be completed.
- Scope is the design system, not your application. Content, page structure, media alternatives, forms you assemble and journeys you build are yours, and most accessibility failures live there.
- EN 301 549 currently harmonises WCAG 2.1 AA. We build and test to 2.2, which is stricter, but 2.2 is not yet the harmonised standard — do not cite it as the legal bar.

---

## Citing this in your own statement

A statement typically needs: the standard applied, the assessment method and
date, and a list of what is not accessible. For the design-system portion you can
say, adapting the wording to your situation:

> The user-interface components are built on the UIcockpit design system,
> assessed against WCAG 2.2 AA, plus 2.5.5 Target Size (AAA) on 2026-01-01 by automated testing
> (axe-core, accessibility-tree inspection and rendered target-size measurement)
> across the enhanced-target
> configuration recorded in its conformance report. That assessment did not
> include testing with disabled users.

Keep the last sentence. It is the part that is true of almost every statement
filed, and the part most of them leave out.
"
`;

exports[`genJson > matches snapshot for mono baseline 1`] = `
"{
  "$schema": "https://design-tokens.org/v1",
  "name": "cockpit-ui-kit",
  "meta": {
    "generator": "Cockpit"
  },
  "decisions": {
    "colorTheme": "mono",
    "color": "mono",
    "radius": "soft",
    "conformance": "aa",
    "scale": "default",
    "typeScale": "md",
    "labelCase": "sentence",
    "fontDisplay": "Inter",
    "fontBody": "Inter",
    "iconSet": "line",
    "surfaceDepth": "soft",
    "surface": "outlined",
    "borders": "subtle",
    "cPrimary": "#3b3b42",
    "harmony": "tonal",
    "spread": 60,
    "expression": 100,
    "neutral": "auto",
    "canvas": "neutral",
    "fill": "brand",
    "mode": "light"
  },
  "tokens": {
    "color": {
      "background": {
        "value": "oklch(98.0% 0.0000 0.0)"
      },
      "foreground": {
        "value": "oklch(16.0% 0.0000 0.0)"
      },
      "foreground-muted": {
        "value": "oklch(42.1% 0.0000 89.9)"
      },
      "foreground-faint": {
        "value": "oklch(52.0% 0.0000 89.9)"
      },
      "surface": {
        "value": "oklch(100% 0 0)"
      },
      "surface-sunken": {
        "value": "oklch(93.7% 0.0000 0.0)"
      },
      "surface-2": {
        "value": "oklch(98.0% 0.0000 0.0)"
      },
      "surface-raised": {
        "value": "oklch(100% 0 0)"
      },
      "surface-overlay": {
        "value": "oklch(100% 0 0)"
      },
      "primary": {
        "value": "oklch(23.9% 0.0000 89.9)",
        "name": "Charcoal"
      },
      "primary-hover": {
        "value": "oklch(18.9% 0.0000 89.9)"
      },
      "primary-foreground": {
        "value": "#ffffff"
      },
      "primary-soft": {
        "value": "oklch(95.8% 0.0000 89.9)"
      },
      "secondary": {
        "value": "oklch(63.3% 0.0000 89.9)",
        "name": "Gray"
      },
      "secondary-foreground": {
        "value": "#16160c"
      },
      "secondary-soft": {
        "value": "#ececee"
      },
      "accent": {
        "value": "oklch(61.7% 0.0000 89.9)",
        "name": "Gray"
      },
      "accent-foreground": {
        "value": "#16160c"
      },
      "fill": {
        "value": "oklch(23.9% 0.0000 89.9)"
      },
      "border": {
        "value": "oklch(89.2% 0.0000 0.0)"
      },
      "input-border": {
        "value": "oklch(60.8% 0.0000 89.9)"
      },
      "ring": {
        "value": "oklch(23.9% 0.0000 89.9)"
      },
      "ring-soft": {
        "value": "oklch(95.8% 0.0000 89.9)"
      },
      "secondary-soft-foreground": {
        "value": "#16160c"
      },
      "selection": {
        "value": "oklch(55.7% 0.0478 284.7 / 0.18)"
      }
    },
    "system": {
      "success": {
        "value": "oklch(71.8% 0.1676 152.9)",
        "foreground": "#16160c",
        "soft": "oklch(95.8% 0.0091 161.3)",
        "soft-foreground": "#16160c"
      },
      "warning": {
        "value": "oklch(78.5% 0.1585 85.9)",
        "foreground": "#16160c",
        "soft": "oklch(97.0% 0.0217 92.5)",
        "soft-foreground": "#16160c"
      },
      "danger": {
        "value": "oklch(56.1% 0.1942 29.0)",
        "foreground": "#ffffff",
        "soft": "oklch(94.9% 0.0088 26.0)",
        "soft-foreground": "#16160c"
      },
      "info": {
        "value": "oklch(56.3% 0.1594 254.8)",
        "foreground": "#ffffff",
        "soft": "oklch(95.1% 0.0080 253.9)",
        "soft-foreground": "#16160c"
      }
    },
    "state": {
      "disabled-bg": {
        "value": "oklch(98.0% 0.0000 0.0)"
      },
      "disabled-foreground": {
        "value": "oklch(52.0% 0.0000 89.9)"
      },
      "disabled-opacity": {
        "value": "0.55"
      },
      "focus-ring-width": {
        "value": "2px"
      },
      "focus-ring-offset": {
        "value": "2px"
      },
      "input-error-border": {
        "value": "#ce3227"
      },
      "input-success-border": {
        "value": "#33c16f"
      },
      "input-warning-border": {
        "value": "#e6b00f"
      }
    },
    "radius": {
      "md": {
        "value": "0.625rem"
      },
      "lg": {
        "value": "0.75rem"
      },
      "pill": {
        "value": "999px"
      },
      "button": {
        "value": "0.625rem"
      }
    },
    "shadow": {
      "sm": {
        "value": "0 1px 2px hsl(240 8% 18%/.07)"
      },
      "md": {
        "value": "0 4px 6px -1px hsl(240 8% 18%/.10), 0 2px 4px -2px hsl(240 8% 18%/.10)"
      },
      "lg": {
        "value": "0 10px 15px -3px hsl(240 8% 18%/.13), 0 4px 6px -4px hsl(240 8% 18%/.13)"
      }
    },
    "spacing": {
      "base": {
        "value": "1rem"
      }
    },
    "border": {
      "width": {
        "value": "1px"
      }
    },
    "typography": {
      "font-display": {
        "value": "'Inter',sans-serif"
      },
      "font-body": {
        "value": "'Inter',sans-serif"
      },
      "font-mono": {
        "value": "'JetBrains Mono',ui-monospace,monospace"
      },
      "size-h1": {
        "value": "1.875rem"
      },
      "size-h2": {
        "value": "1.375rem"
      },
      "size-h3": {
        "value": "1rem"
      },
      "size-body": {
        "value": "0.875rem"
      },
      "size-small": {
        "value": "0.75rem"
      },
      "size-eyebrow": {
        "value": "0.6875rem"
      },
      "ui-weight": {
        "value": 600
      }
    },
    "motion": {
      "duration-fast": {
        "value": "120ms"
      },
      "duration": {
        "value": "200ms"
      },
      "duration-slow": {
        "value": "320ms"
      },
      "easing": {
        "value": "cubic-bezier(.4,0,.2,1)"
      },
      "easing-out": {
        "value": "cubic-bezier(.05,.7,.1,1)"
      },
      "easing-in": {
        "value": "cubic-bezier(.3,0,.8,.15)"
      },
      "animations": {
        "fade-in": {
          "value": "k-fade-in 120ms cubic-bezier(.05,.7,.1,1) both"
        },
        "fade-out": {
          "value": "k-fade-out 120ms cubic-bezier(.3,0,.8,.15) both"
        },
        "slide-up": {
          "value": "k-slide-up 200ms cubic-bezier(.05,.7,.1,1) both"
        },
        "slide-down": {
          "value": "k-slide-down 200ms cubic-bezier(.05,.7,.1,1) both"
        },
        "scale-in": {
          "value": "k-scale-in 200ms cubic-bezier(.05,.7,.1,1) both"
        },
        "scale-out": {
          "value": "k-scale-out 120ms cubic-bezier(.3,0,.8,.15) both"
        },
        "spin": {
          "value": "k-spin 800ms linear infinite"
        }
      },
      "state-hover": {
        "value": "oklch(25.0% 0.0113 285.6 / 0.05)"
      }
    },
    "icon": {
      "style": {
        "value": "line"
      },
      "library": {
        "value": "Lucide (1.75px stroke, balanced)"
      },
      "package": {
        "value": "lucide-react"
      },
      "install": {
        "value": "npm install lucide-react"
      },
      "stroke-width": {
        "value": 1.75
      }
    },
    "z-index": {
      "base": {
        "value": 0
      },
      "dropdown": {
        "value": 50
      },
      "sticky": {
        "value": 100
      },
      "fixed": {
        "value": 200
      },
      "drawer": {
        "value": 300
      },
      "modal": {
        "value": 1000
      },
      "popover": {
        "value": 1100
      },
      "toast": {
        "value": 1200
      },
      "tooltip": {
        "value": 1300
      }
    },
    "breakpoint": {
      "sm": {
        "value": "640px"
      },
      "md": {
        "value": "768px"
      },
      "lg": {
        "value": "1024px"
      },
      "xl": {
        "value": "1280px"
      },
      "2xl": {
        "value": "1536px"
      }
    },
    "container": {
      "narrow": {
        "value": "640px"
      },
      "regular": {
        "value": "1024px"
      },
      "wide": {
        "value": "1280px"
      },
      "max": {
        "value": "1536px"
      }
    },
    "palette": {
      "accent-1": {
        "value": "oklch(42.0% 0.0000 89.9)"
      },
      "accent-1-ink": {
        "value": "#ffffff"
      },
      "accent-1-soft": {
        "value": "oklch(90.1% 0.0000 89.9)"
      },
      "accent-1-soft-fg": {
        "value": "oklch(34.1% 0.0000 89.9)"
      },
      "grad-1": {
        "value": "linear-gradient(135deg, oklch(42.0% 0.0000 89.9), oklch(52.8% 0.0000 89.9))"
      },
      "chart-1": {
        "value": "oklch(42.0% 0.0000 89.9)"
      },
      "accent-2": {
        "value": "oklch(52.8% 0.0000 89.9)"
      },
      "accent-2-ink": {
        "value": "#ffffff"
      },
      "accent-2-soft": {
        "value": "oklch(90.1% 0.0000 89.9)"
      },
      "accent-2-soft-fg": {
        "value": "oklch(34.1% 0.0000 89.9)"
      },
      "grad-2": {
        "value": "linear-gradient(135deg, oklch(52.8% 0.0000 89.9), oklch(63.3% 0.0000 89.9))"
      },
      "chart-2": {
        "value": "oklch(52.8% 0.0000 89.9)"
      },
      "accent-3": {
        "value": "oklch(61.7% 0.0000 89.9)"
      },
      "accent-3-ink": {
        "value": "#16160c"
      },
      "accent-3-soft": {
        "value": "oklch(90.1% 0.0000 89.9)"
      },
      "accent-3-soft-fg": {
        "value": "oklch(34.1% 0.0000 89.9)"
      },
      "grad-3": {
        "value": "linear-gradient(135deg, oklch(61.7% 0.0000 89.9), oklch(71.5% 0.0000 89.9))"
      },
      "chart-3": {
        "value": "oklch(61.7% 0.0000 89.9)"
      },
      "accent-4": {
        "value": "oklch(69.3% 0.0000 89.9)"
      },
      "accent-4-ink": {
        "value": "#16160c"
      },
      "accent-4-soft": {
        "value": "oklch(90.1% 0.0000 89.9)"
      },
      "accent-4-soft-fg": {
        "value": "oklch(34.1% 0.0000 89.9)"
      },
      "grad-4": {
        "value": "linear-gradient(135deg, oklch(69.3% 0.0000 89.9), oklch(78.9% 0.0000 89.9))"
      },
      "chart-4": {
        "value": "oklch(69.3% 0.0000 89.9)"
      },
      "accent-5": {
        "value": "oklch(76.7% 0.0000 89.9)"
      },
      "accent-5-ink": {
        "value": "#16160c"
      },
      "accent-5-soft": {
        "value": "oklch(90.1% 0.0000 89.9)"
      },
      "accent-5-soft-fg": {
        "value": "oklch(34.1% 0.0000 89.9)"
      },
      "grad-5": {
        "value": "linear-gradient(135deg, oklch(76.7% 0.0000 89.9), oklch(86.1% 0.0000 89.9))"
      },
      "chart-5": {
        "value": "oklch(76.7% 0.0000 89.9)"
      },
      "accent-6": {
        "value": "oklch(83.0% 0.0000 89.9)"
      },
      "accent-6-ink": {
        "value": "#16160c"
      },
      "accent-6-soft": {
        "value": "oklch(90.1% 0.0000 89.9)"
      },
      "accent-6-soft-fg": {
        "value": "oklch(34.1% 0.0000 89.9)"
      },
      "grad-6": {
        "value": "linear-gradient(135deg, oklch(83.0% 0.0000 89.9), oklch(92.5% 0.0000 89.9))"
      },
      "chart-6": {
        "value": "oklch(83.0% 0.0000 89.9)"
      }
    },
    "type-scale-extended": {
      "h4": {
        "value": "0.938rem"
      },
      "h5": {
        "value": "0.919rem"
      }
    },
    "spacing-scale": {
      "s-0": {
        "value": "0"
      },
      "s-2": {
        "value": "0.125rem"
      },
      "s-4": {
        "value": "0.25rem"
      },
      "s-6": {
        "value": "0.375rem"
      },
      "s-8": {
        "value": "0.5rem"
      },
      "s-10": {
        "value": "0.625rem"
      },
      "s-12": {
        "value": "0.75rem"
      },
      "s-14": {
        "value": "0.875rem"
      },
      "s-16": {
        "value": "1rem"
      },
      "s-20": {
        "value": "1.25rem"
      },
      "s-24": {
        "value": "1.5rem"
      },
      "s-28": {
        "value": "1.75rem"
      },
      "s-32": {
        "value": "2rem"
      }
    }
  },
  "accessibility": {
    "pairs": [
      {
        "label": "Body text on background",
        "ratio": 18.3,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Body text on surface",
        "ratio": 19.44,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Body text on raised surface",
        "ratio": 19.44,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Body text on overlay",
        "ratio": 19.44,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Muted text on background",
        "ratio": 7.96,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Muted text on surface-2",
        "ratio": 7.96,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Button text on primary",
        "ratio": 16.48,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Button text on primary hover",
        "ratio": 18.42,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Secondary button text",
        "ratio": 15.42,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Success text on success-soft",
        "ratio": 16.14,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Warning text on warning-soft",
        "ratio": 16.68,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Danger text on danger-soft",
        "ratio": 15.63,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Info text on info-soft",
        "ratio": 15.76,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Danger text on surface",
        "ratio": 5.55,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Link text on surface",
        "ratio": 16.48,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Link hover on surface",
        "ratio": 17.16,
        "required": 4.5,
        "passes": true
      },
      {
        "label": "Primary against background",
        "ratio": 15.52,
        "required": 3,
        "passes": true
      },
      {
        "label": "Input border against background",
        "ratio": 3.62,
        "required": 3,
        "passes": true
      },
      {
        "label": "Input border against its fill",
        "ratio": 3.4,
        "required": 3,
        "passes": true
      },
      {
        "label": "Focus ring against background",
        "ratio": 15.52,
        "required": 3,
        "passes": true
      }
    ]
  },
  "dark": {
    "--k-bg": "oklch(21.3% 0.0000 0.0)",
    "--k-surface-fill": "color-mix(in srgb, var(--k-primary) 6%, oklch(17.6% 0.0000 0.0))",
    "--k-chrome-bg": "oklch(21.3% 0.0000 0.0)",
    "--k-surface": "oklch(25.4% 0.0000 0.0)",
    "--k-surface-sunken": "oklch(17.6% 0.0000 0.0)",
    "--k-surface-2": "oklch(28.5% 0.0000 0.0)",
    "--k-surface-container-lowest": "oklch(17.6% 0.0000 0.0)",
    "--k-surface-container-low": "oklch(25.4% 0.0000 0.0)",
    "--k-surface-container": "oklch(28.5% 0.0000 0.0)",
    "--k-surface-container-high": "oklch(31.7% 0.0000 0.0)",
    "--k-surface-container-highest": "oklch(35.5% 0.0000 0.0)",
    "--k-inverse-surface": "oklch(95.8% 0.0000 0.0)",
    "--k-inverse-fg": "oklch(16.0% 0.0000 0.0)",
    "--k-inverse-fg-muted": "color-mix(in srgb, oklch(16.0% 0.0000 0.0) 62%, oklch(95.8% 0.0000 0.0))",
    "--k-inverse-primary": "oklch(23.9% 0.0000 89.9)",
    "--k-input-bg": "oklch(17.6% 0.0000 0.0)",
    "--k-track": "color-mix(in srgb, oklch(94.5% 0.0000 0.0) 5%, oklch(21.3% 0.0000 0.0))",
    "--k-surface-raised": "oklch(31.7% 0.0000 0.0)",
    "--k-surface-overlay": "oklch(35.5% 0.0000 0.0)",
    "--k-fg": "oklch(94.5% 0.0000 0.0)",
    "--k-fg-muted": "oklch(83.2% 0.0000 89.9)",
    "--k-fg-faint": "oklch(73.0% 0.0000 89.9)",
    "--k-primary": "oklch(94.0% 0.0000 89.9)",
    "--k-primary-text": "oklch(94.0% 0.0000 89.9)",
    "--k-primary-text-hover": "oklch(79.0% 0.0095 286.2)",
    "--k-primary-hover": "oklch(99.0% 0.0000 89.9)",
    "--k-primary-fg": "#16160c",
    "--k-primary-soft": "oklch(25.4% 0.0000 89.9)",
    "--k-primary-soft-fg": "oklch(90.0% 0.0095 286.2)",
    "--k-selection": "oklch(73.8% 0.0300 285.6 / 0.32)",
    "--k-accent": "oklch(68.3% 0.0000 89.9)",
    "--k-accent-text": "oklch(73.3% 0.0000 89.9)",
    "--k-accent-soft": "oklch(29.9% 0.0252 284.8)",
    "--k-accent-soft-fg": "#ffffff",
    "--k-chart-1": "oklch(83.0% 0.0000 89.9)",
    "--k-chart-2": "oklch(74.8% 0.0000 89.9)",
    "--k-chart-3": "oklch(66.7% 0.0000 89.9)",
    "--k-chart-4": "oklch(59.0% 0.0000 89.9)",
    "--k-chart-5": "oklch(51.0% 0.0000 89.9)",
    "--k-chart-6": "oklch(43.9% 0.0000 89.9)",
    "--k-accent-1": "oklch(83.0% 0.0000 89.9)",
    "--k-accent-2": "oklch(74.8% 0.0000 89.9)",
    "--k-accent-3": "oklch(66.7% 0.0000 89.9)",
    "--k-accent-4": "oklch(59.0% 0.0000 89.9)",
    "--k-accent-5": "oklch(51.0% 0.0000 89.9)",
    "--k-accent-6": "oklch(43.9% 0.0000 89.9)",
    "--k-accent-1-ink": "#16160c",
    "--k-accent-2-ink": "#16160c",
    "--k-accent-4-ink": "#ffffff",
    "--k-accent-5-ink": "#ffffff",
    "--k-accent-6-ink": "#ffffff",
    "--k-accent-1-soft": "oklch(37.9% 0.0000 89.9)",
    "--k-accent-2-soft": "oklch(37.9% 0.0000 89.9)",
    "--k-accent-3-soft": "oklch(37.9% 0.0000 89.9)",
    "--k-accent-4-soft": "oklch(37.9% 0.0000 89.9)",
    "--k-accent-5-soft": "oklch(37.9% 0.0000 89.9)",
    "--k-accent-6-soft": "oklch(37.9% 0.0000 89.9)",
    "--k-accent-1-soft-fg": "oklch(86.1% 0.0000 89.9)",
    "--k-accent-2-soft-fg": "oklch(86.1% 0.0000 89.9)",
    "--k-accent-3-soft-fg": "oklch(86.1% 0.0000 89.9)",
    "--k-accent-4-soft-fg": "oklch(86.1% 0.0000 89.9)",
    "--k-accent-5-soft-fg": "oklch(86.1% 0.0000 89.9)",
    "--k-accent-6-soft-fg": "oklch(86.1% 0.0000 89.9)",
    "--k-grad-1": "linear-gradient(135deg, oklch(83.0% 0.0000 89.9), oklch(90.7% 0.0000 89.9))",
    "--k-grad-2": "linear-gradient(135deg, oklch(74.8% 0.0000 89.9), oklch(83.0% 0.0000 89.9))",
    "--k-grad-3": "linear-gradient(135deg, oklch(66.7% 0.0000 89.9), oklch(74.8% 0.0000 89.9))",
    "--k-grad-4": "linear-gradient(135deg, oklch(59.0% 0.0000 89.9), oklch(67.3% 0.0000 89.9))",
    "--k-grad-5": "linear-gradient(135deg, oklch(51.0% 0.0000 89.9), oklch(60.0% 0.0000 89.9))",
    "--k-grad-6": "linear-gradient(135deg, oklch(43.9% 0.0000 89.9), oklch(52.8% 0.0000 89.9))",
    "--k-fill": "oklch(94.0% 0.0000 89.9)",
    "--k-secondary": "oklch(68.3% 0.0000 89.9)",
    "--k-secondary-soft": "#303036",
    "--k-secondary-soft-fg": "#ffffff",
    "--k-neutral": "oklch(31.7% 0.0000 0.0)",
    "--k-neutral-fg": "oklch(94.5% 0.0000 0.0)",
    "--k-success": "oklch(76.3% 0.1398 155.5)",
    "--k-success-text": "oklch(76.3% 0.1398 155.5)",
    "--k-success-soft": "oklch(34.5% 0.0416 158.0)",
    "--k-success-soft-fg": "#ffffff",
    "--k-warning": "oklch(80.9% 0.1412 90.1)",
    "--k-warning-text": "oklch(80.9% 0.1412 90.1)",
    "--k-warning-soft": "oklch(35.4% 0.0395 91.7)",
    "--k-warning-soft-fg": "#ffffff",
    "--k-danger": "oklch(62.4% 0.1583 26.8)",
    "--k-danger-fg": "#16160c",
    "--k-danger-text": "oklch(74.4% 0.1583 26.8)",
    "--k-danger-soft": "oklch(30.3% 0.0461 24.2)",
    "--k-danger-soft-fg": "#ffffff",
    "--k-info": "oklch(64.3% 0.1204 252.8)",
    "--k-info-fg": "#16160c",
    "--k-info-text": "oklch(73.3% 0.1204 252.8)",
    "--k-info-soft": "oklch(31.2% 0.0345 252.2)",
    "--k-info-soft-fg": "#ffffff",
    "--k-border": "oklch(28.5% 0.0000 0.0)",
    "--k-input-border": "oklch(55.7% 0.0000 89.9)",
    "--k-ring": "oklch(94.0% 0.0000 89.9)",
    "--k-ring-soft": "oklch(25.4% 0.0000 89.9)",
    "--k-ring-halo": "color-mix(in srgb, oklch(94.0% 0.0000 89.9) 28%, transparent)",
    "--k-state-border": "oklch(66.2% 0.0235 285.7)",
    "--k-shadow-xs": "0 1px 2px hsl(0 0 0/.05)",
    "--k-shadow-sm": "0 1px 2px hsl(0 0 0/.07)",
    "--k-shadow-md": "0 4px 6px -1px hsl(0 0 0/.10), 0 2px 4px -2px hsl(0 0 0/.10)",
    "--k-shadow-lg": "0 10px 15px -3px hsl(0 0 0/.13), 0 4px 6px -4px hsl(0 0 0/.13)",
    "--k-shadow-tactile": "inset 0 1px 0 hsl(0 0% 100% / 0.06), 0 1px 2px hsl(0 0% 0% / 0.45)",
    "--k-shadow-pressed": "inset 0 1px 2px hsl(0 0% 0% / 0.35)",
    "--k-btn-shadow": "0 1px 2px hsl(0 0% 0% / 0.35)",
    "--k-state-hover": "oklch(88.4% 0.0082 286.2 / 0.05)",
    "--k-state-press": "oklch(88.4% 0.0082 286.2 / 0.15000000000000002)",
    "--k-disabled-bg": "oklch(28.5% 0.0000 0.0)",
    "--k-disabled-fg": "oklch(73.0% 0.0000 89.9)",
    "--k-input-error-border": "#d65a51",
    "--k-input-success-border": "#5ccc8b",
    "--k-input-warning-border": "#e4bc44",
    "--k-glass-bg": "hsl(240 8% 12.9% / 0.72)",
    "--k-glass-edge": "inset 0 1px 0 hsl(0 0% 100% / 0.08)"
  }
}"
`;

exports[`genRegistry (shadcn registry:theme JSON) > matches snapshot for soft + cobalt sample 1`] = `
"{
  "$schema": "https://ui.shadcn.com/schema/registry-item.json",
  "name": "uicockpit-cobalt-comfortable",
  "type": "registry:theme",
  "cssVars": {
    "light": {
      "background": "oklch(98.0% 0.0063 249.9)",
      "foreground": "oklch(16.0% 0.0140 249.9)",
      "card": "oklch(100% 0 0)",
      "card-foreground": "oklch(16.0% 0.0140 249.9)",
      "popover": "oklch(100% 0 0)",
      "popover-foreground": "oklch(16.0% 0.0140 249.9)",
      "primary": "oklch(56.4% 0.1689 253.9)",
      "primary-foreground": "#ffffff",
      "secondary": "#dee3f2",
      "secondary-foreground": "#16160c",
      "muted": "oklch(98.0% 0.0063 249.9)",
      "muted-foreground": "oklch(42.1% 0.0141 248.1)",
      "accent": "oklch(54.1% 0.2701 298.9)",
      "accent-foreground": "#ffffff",
      "destructive": "oklch(55.7% 0.1997 17.4)",
      "destructive-foreground": "#ffffff",
      "border": "oklch(89.2% 0.0077 249.9)",
      "input": "oklch(60.8% 0.0088 247.9)",
      "ring": "oklch(56.4% 0.1689 253.9)",
      "chart-1": "oklch(62.3% 0.1589 252.4)",
      "chart-2": "oklch(64.9% 0.2616 332.9)",
      "chart-3": "oklch(86.5% 0.1907 119.3)",
      "chart-4": "oklch(48.7% 0.2463 281.4)",
      "chart-5": "oklch(65.6% 0.1692 41.6)",
      "sidebar": "oklch(93.7% 0.0077 249.9)",
      "sidebar-foreground": "oklch(16.0% 0.0140 249.9)",
      "sidebar-primary": "oklch(56.4% 0.1689 253.9)",
      "sidebar-primary-foreground": "#ffffff",
      "sidebar-accent": "oklch(95.8% 0.0372 253.9)",
      "sidebar-accent-foreground": "oklch(56.4% 0.1689 253.9)",
      "sidebar-border": "oklch(89.2% 0.0077 249.9)",
      "sidebar-ring": "oklch(56.4% 0.1689 253.9)",
      "radius": "1rem"
    },
    "dark": {
      "background": "oklch(21.3% 0.0063 249.9)",
      "foreground": "oklch(94.5% 0.0140 249.9)",
      "card": "oklch(25.4% 0.0070 249.9)",
      "card-foreground": "oklch(94.5% 0.0140 249.9)",
      "popover": "oklch(35.5% 0.0077 249.9)",
      "popover-foreground": "oklch(94.5% 0.0140 249.9)",
      "primary": "oklch(56.4% 0.1689 253.9)",
      "primary-foreground": "#ffffff",
      "secondary": "#263050",
      "secondary-foreground": "#ffffff",
      "muted": "oklch(28.5% 0.0077 249.9)",
      "muted-foreground": "oklch(82.9% 0.0145 248.0)",
      "accent": "oklch(59.9% 0.2408 302.4)",
      "accent-foreground": "#ffffff",
      "destructive": "oklch(61.8% 0.1675 12.1)",
      "destructive-foreground": "#16160c",
      "border": "oklch(28.5% 0.0077 249.9)",
      "input": "oklch(55.6% 0.0083 255.6)",
      "ring": "oklch(56.4% 0.1689 253.9)",
      "chart-1": "oklch(63.7% 0.1493 251.8)",
      "chart-2": "oklch(65.5% 0.2511 332.6)",
      "chart-3": "oklch(86.4% 0.1838 118.9)",
      "chart-4": "oklch(50.5% 0.2342 283.2)",
      "chart-5": "oklch(66.7% 0.1582 42.5)",
      "sidebar": "oklch(17.6% 0.0056 249.9)",
      "sidebar-foreground": "oklch(94.5% 0.0140 249.9)",
      "sidebar-primary": "oklch(56.4% 0.1689 253.9)",
      "sidebar-primary-foreground": "#ffffff",
      "sidebar-accent": "oklch(25.4% 0.0372 253.9)",
      "sidebar-accent-foreground": "oklch(56.4% 0.1689 253.9)",
      "sidebar-border": "oklch(28.5% 0.0077 249.9)",
      "sidebar-ring": "oklch(56.4% 0.1689 253.9)",
      "radius": "1rem"
    }
  }
}
"
`;

exports[`genSkill > matches snapshot for soft + cobalt sample 1`] = `
"# UIcockpit design-system rules

You are building inside a configured design system. Apply it to every component
you create or restyle. These are the binding rules — load them every session.

## Always
- **Read a token, never a literal.** Colour → \`var(--k-primary)\` / \`--k-fg\` / \`--k-surface\`…;
  spacing → \`--k-pad\` / \`--k-space\` / \`--k-stack-gap\`; radius → \`--k-radius-*\`;
  type → \`--k-type-*\`; shadow → \`--k-shadow-*\`; motion → \`--k-dur-*\` / \`--k-ease-*\`.
  A hardcoded \`#hex\`, \`gap: 7px\` or \`font-size: 15px\` opts that element out of theming.
- **Primary actions** use \`var(--k-primary)\` bg + \`var(--k-primary-fg)\` text — solid, never a gradient.
- **Button and input share one height** per the Scale (this kit: comfortable → 40px); an action
  row like \`[input] [Submit]\` sits on one baseline. Never mix \`.btn--sm\` with a default \`.in\`.
- **Compose the kit's recipes — don't hand-roll.** ~80 classes cover most jobs:
  atoms (\`.btn\` \`.in\` \`.select-trigger\` \`.badge\` \`.chip\` \`.avatar\` \`.switch\`/\`.toggle\` \`.radio\`),
  data (\`.table\` \`.datatable\` \`.list\` \`.dl\` \`.stat-tile\`/\`.stat-tile-grid\`), forms (\`.formpanel\` \`.field\`),
  nav/shell (\`.toolbar\` \`.navrow\` \`.navsuite\` \`.sidenav\` \`.scaffold\` \`.page-head\` \`.section\`),
  overlays (\`.menu\` \`.dialog\` \`.popover\` \`.toast\`), filters (\`.filterbar\` \`.searchinput\` \`.combobox\`).
  **The FULL catalog (every class + its modifiers) is in \`contract.json\` → \`components.classes\`;
  \`design.md\` has each recipe's intent + how to compose it. Consult them before inventing a class.**
- **Status** uses the system colours (\`--k-success\` / \`-warning\` / \`-danger\` / \`-info\`,
  each with \`-fg\` + \`-soft\`); pair colour with text/icon, never colour alone (WCAG 1.4.1).
- **Real semantics:** a button is \`<button>\`, a link is \`<a>\`, inputs carry their \`type\`;
  every control has an accessible name; \`:focus-visible\` ring on everything interactive.
- **Icons:** Lucide (1.75px stroke, balanced) only — \`npm install lucide-react\`. Don't mix libraries.
- **Dark mode:** add \`.dark\` to a parent; the tokens re-resolve. Respect \`prefers-reduced-motion\`.

## Never
- Never hardcode a colour, radius, spacing, font-size, shadow or duration.
- Never put a gradient on a button, or use a system status colour for decoration.
- Never hand-roll a pattern that already has a recipe, or fork a one-off per-screen variant.
- Never scale chart bars / sliders / toggle knobs / avatars with the theme radius — those are
  fixed (3–4px or 999px). Never use \`--k-type-small\` (12px) for sentence content.
- Never rewrite the app's logic to fit the kit — re-skin look/layout/composition only.

## Behaviour contract (what the kit does NOT ship)
The kit is CSS + tokens — look, layout, composition, a11y *structure*. It ships NO JS
behaviour runtime; you wire interaction yourself (or use your framework's primitive —
Radix / Headless UI / cmdk):
- **State via aria, not just a class.** Selected toggle/segmented/tab → set \`aria-checked\`
  / \`aria-selected\` / \`aria-pressed\` (the recipe styles off the attribute, so the a11y
  truth drives the visual). Open menus/dialogs need focus-trap + Esc + focus-return.
- **Listboxes & custom triggers** (select-trigger · combobox · dropdown · menubar ·
  navmenu): you own keyboard nav (arrows / typeahead / Esc) + open/close. Prefer the
  NATIVE \`<select class="select">\` (fully accessible, zero JS) when a native control fits.
- **OTP / slider:** wire focus-advance+paste / keyboard + \`aria-valuenow\` yourself.
- **Overlays** (popover · tooltip · hover-card) open ONE static side (placement modifiers
  e.g. \`.tooltip__pop--bottom\` / \`--left\` / \`--right\`, \`.popover--top\` / \`--end\`); there's no
  JS collision-flip — pick the side that clears the viewport edge, and portal the overlay
  if a parent clips it.
- **Scroll-area** styles the NATIVE scrollbar (Chromium + Firefox); Safari keeps the OS
  default — best-effort, degrades gracefully. Don't expect a pixel-identical thumb cross-browser.

## This kit at a glance
- Brand \`var(--k-primary)\` = #1575d5 · Scale comfortable (control height 40px)
- Radius round · Surface outlined · Elevation Deep
- Type: Inter display / Inter body · Icons Lucide (1.75px stroke, balanced)
- Full values + rationale live in **design.md**; the live \`tokens.css\` link is the source of truth.

## Before you invent a component — ask the forge
The kit's component list is DERIVED (HTML · WAI-ARIA APG · GOV.UK/USWDS/NL Design System),
so most things you are about to build either exist already, or are the platform's, or must
not become a component. Before hand-rolling anything the kit does not obviously have,
describe it in a sentence:

\`\`\`bash
npx uicockpit forge "a toast that confirms the save"   # or, over MCP: call resolve_component
\`\`\`

Act on the answer, not around it: **EXISTS** → use that recipe (it comes with its usage,
APG keys and page) · **PLATFORM** → use the element, the floor styles it, do not build a
component · **MAY EXIST** → start from the returned scaffold (tokens only, data-role for
the look) · **NO** → build it outside the system as a local extension and mark it so —
never as a new \`.something\` that pretends to be kit. Every answer is a citation you can
click, not an opinion.

## Verify — run this after EVERY change, not once (the loop that actually binds)
The rules above are a nudge; a fresh session — or a later you — drifts anyway (a wrong
blue, an off-scale radius, a magic \`20px\`). Nothing catches that by eye. So after **every**
UI edit, run the verifier against this pack's \`contract.json\` and treat a violation like a
failing test — fix it before you move on:

\`\`\`bash
npx uicockpit check --strict   # or, over MCP: call check_conformance with strict: true
\`\`\`

It flags hardcoded hex, off-grid spacing, magic px and wrong tokens. Re-run until clean.
Use \`--strict\` (above) so that style drift — a raw hex, off-grid spacing, an off-scale radius —
also fails, not only broken references; without it those are warnings you can miss.

**Make it automatic** so coherence survives a fresh context window: add \`npx uicockpit check --strict\`
as a **pre-commit hook and/or a CI step**. That turns "please use the token" into a check that
**fails the build** on drift — the only thing that reliably holds across many screens, sessions
and hands.
"
`;

exports[`genTailwind > matches snapshot for soft + cobalt sample 1`] = `
"/* globals.css — UIcockpit design system, Tailwind v4
 *
 * Standalone: imports Tailwind v4 and registers the Cockpit theme.
 * Place in src/app/globals.css (Next) or src/styles/globals.css (Vite),
 * then import once from your root layout.
 *
 * Dark mode: add the class .dark to a parent element. Tailwind v4 reads
 * the @theme block at build time, so every utility (bg-primary, text-muted,
 * shadow-md, font-display, …) resolves to the current values.
 *
 * Icons (this kit uses Lucide (1.75px stroke, balanced)):
 *   npm install lucide-react
 */

@import "tailwindcss";

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap');


@custom-variant dark (&:is(.dark *));

@theme {
  --color-background: oklch(98.0% 0.0063 249.9);
  --color-foreground: oklch(16.0% 0.0140 249.9);
  --color-muted: oklch(42.1% 0.0141 248.1);
  --color-faint: oklch(52.0% 0.0114 248.0);
  --color-surface: oklch(100% 0 0);
  --color-surface-sunken: oklch(93.7% 0.0077 249.9);
  --color-surface-2: oklch(98.0% 0.0063 249.9);
  --color-surface-raised: oklch(100% 0 0);
  --color-surface-overlay: oklch(100% 0 0);
  --color-primary: oklch(56.4% 0.1689 253.9);
  --color-primary-hover: oklch(51.4% 0.1638 253.9);
  --color-primary-foreground: #ffffff;
  --color-primary-soft: oklch(95.8% 0.0372 253.9);
  --color-secondary: oklch(50.1% 0.1466 267.1);
  --color-secondary-foreground: #ffffff;
  --color-secondary-soft: #dee3f2;
  --color-accent: oklch(54.1% 0.2701 298.9);
  --color-accent-foreground: #ffffff;
  --color-fill: oklch(56.4% 0.1689 253.9);
  --color-border: oklch(89.2% 0.0077 249.9);
  --color-input-border: oklch(60.8% 0.0088 247.9);
  --color-ring: oklch(56.4% 0.1689 253.9);
  --color-ring-soft: oklch(95.8% 0.0372 253.9);
  --color-secondary-soft-foreground: #16160c;
  --color-selection: oklch(59.9% 0.1813 254.1 / 0.18);
  --color-disabled-bg: oklch(98.0% 0.0063 249.9);
  --color-disabled-foreground: oklch(52.0% 0.0114 248.0);
  --color-input-error-border: #ce2746;
  --color-input-success-border: #33c192;
  --color-input-warning-border: #e6e60f;
  --color-success: oklch(72.5% 0.1371 165.8);
  --color-success-foreground: #16160c;
  --color-success-soft: oklch(95.8% 0.0079 177.3);
  --color-warning: oklch(89.6% 0.1934 109.7);
  --color-warning-foreground: #16160c;
  --color-warning-soft: oklch(98.0% 0.0275 106.9);
  --color-danger: oklch(55.7% 0.1997 17.4);
  --color-danger-foreground: #ffffff;
  --color-danger-soft: oklch(94.8% 0.0101 2.0);
  --color-info: oklch(56.8% 0.1572 253.9);
  --color-info-foreground: #ffffff;
  --color-info-soft: oklch(95.2% 0.0076 241.7);
  --radius-sm: calc(1rem * 0.6);
  --radius-md: 1rem;
  --radius-lg: 1rem;
  --radius-pill: 999px;
  --radius-button: 1rem;
  --shadow-sm: 0 1px 2px hsl(210 16% 18%/.10);
  --shadow-md: 0 2px 4px hsl(210 16% 18%/.10),0 6px 14px hsl(210 16% 18%/.12);
  --shadow-lg: 0 4px 8px hsl(210 16% 18%/.10),0 12px 24px hsl(210 16% 18%/.14),0 24px 48px hsl(210 16% 18%/.14);
  --spacing-base: 1.25rem;
  --font-display: 'Inter',sans-serif;
  --font-sans: 'Inter',sans-serif;
  --font-mono: 'JetBrains Mono',ui-monospace,monospace;
  --text-h1: 1.9563rem;
  --text-h2: 1.4125rem;
  --text-h3: 1.0125rem;
  --text-body: 0.875rem;
  --text-small: 0.75rem;
  --text-eyebrow: 0.6875rem;
  /* Motion — three-tier durations + direction-aware easings.
     Use duration-fast / duration / duration-slow for transition-duration utils,
     ease-out for enter animations, ease-in for exit. */
  --default-transition-duration: 200ms;
  --default-transition-timing-function: cubic-bezier(.4,0,.2,1);
  --duration-fast: 120ms;
  --duration: 200ms;
  --duration-slow: 320ms;
  --ease: cubic-bezier(.4,0,.2,1);
  --ease-out: cubic-bezier(.05,.7,.1,1);
  --ease-in: cubic-bezier(.3,0,.8,.15);
  /* Named animation shorthands — use with: animate-[var(--animate-fade-in)] */
  --animate-fade-in: k-fade-in 120ms cubic-bezier(.05,.7,.1,1) both;
  --animate-fade-out: k-fade-out 120ms cubic-bezier(.3,0,.8,.15) both;
  --animate-slide-up: k-slide-up 200ms cubic-bezier(.05,.7,.1,1) both;
  --animate-slide-down: k-slide-down 200ms cubic-bezier(.05,.7,.1,1) both;
  --animate-scale-in: k-scale-in 200ms cubic-bezier(.05,.7,.1,1) both;
  --animate-scale-out: k-scale-out 120ms cubic-bezier(.3,0,.8,.15) both;
  --animate-spin-default: k-spin 800ms linear infinite;
  /* Menu "roll-down" signature — panel + staggered items (see tokens.css keyframes) */
  --animate-menu: k-menu-roll 200ms cubic-bezier(.05,.7,.1,1) both;
  --animate-menu-item: k-menu-item 200ms cubic-bezier(.05,.7,.1,1) both;
  --menu-stagger: 20ms;
  /* UI text — applies to buttons, badges, tabs, nav rows, form labels.
     Sentence case at the 14px body floor; uppercase only via the eyebrow role. */
  --ui-font-weight: 600;
  /* State + focus ring + disabled opacity */
  --opacity-disabled: 0.55;
  --width-focus-ring: 2px;
  --offset-focus-ring: 2px;
  /* Z-index stack (Tailwind utilities: z-dropdown, z-modal, etc.) */
  --z-base: 0;
  --z-dropdown: 50;
  --z-sticky: 100;
  --z-fixed: 200;
  --z-drawer: 300;
  --z-modal: 1000;
  --z-popover: 1100;
  --z-toast: 1200;
  --z-tooltip: 1300;
  /* Breakpoints (mobile-first, Tailwind defaults) */
  --breakpoint-sm: 640px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 1024px;
  --breakpoint-xl: 1280px;
  --breakpoint-2xl: 1536px;
  /* Container widths */
  --container-narrow: 640px;
  --container-regular: 1024px;
  --container-wide: 1280px;
  --container-max: 1536px;
  /* Decorative + chart palette — accent-1..6 (avatars/tiles/labels) and
     chart-1..6 (same colours). Gradient pairs ship in tokens.css as
     --k-grad-1..6. */
  --color-accent-1: oklch(62.3% 0.1589 252.4);
  --color-accent-1-soft: oklch(89.0% 0.0437 248.3);
  --color-accent-1-soft-fg: oklch(33.9% 0.0953 253.0);
  --color-chart-1: oklch(62.3% 0.1589 252.4);
  --color-accent-2: oklch(64.9% 0.2616 332.9);
  --color-accent-2-soft: oklch(88.1% 0.0814 329.6);
  --color-accent-2-soft-fg: oklch(35.9% 0.1527 333.0);
  --color-chart-2: oklch(64.9% 0.2616 332.9);
  --color-accent-3: oklch(86.5% 0.1907 119.3);
  --color-accent-3-soft: oklch(95.8% 0.0654 115.0);
  --color-accent-3-soft-fg: oklch(48.3% 0.1109 120.0);
  --color-chart-3: oklch(86.5% 0.1907 119.3);
  --color-accent-4: oklch(48.7% 0.2463 281.4);
  --color-accent-4-soft: oklch(84.8% 0.0697 294.0);
  --color-accent-4-soft-fg: oklch(25.9% 0.1456 278.3);
  --color-chart-4: oklch(48.7% 0.2463 281.4);
  --color-accent-5: oklch(65.6% 0.1692 41.6);
  --color-accent-5-soft: oklch(89.5% 0.0444 44.5);
  --color-accent-5-soft-fg: oklch(35.9% 0.1021 40.5);
  --color-chart-5: oklch(65.6% 0.1692 41.6);
  --color-accent-6: oklch(80.6% 0.2079 150.0);
  --color-accent-6-soft: oklch(93.3% 0.0670 156.8);
  --color-accent-6-soft-fg: oklch(45.0% 0.1223 149.2);
  --color-chart-6: oklch(80.6% 0.2079 150.0);
  /* Extended type scale — h3/h4/h5/caption/eyebrow + display */
  --text-h4: 0.944rem;
  --text-h5: 0.919rem;
  /* Spacing scale — s-0 through s-12 (multiples of --k-space) */
  --spacing-0: 0;
  --spacing-2: 0.125rem;
  --spacing-4: 0.25rem;
  --spacing-6: 0.375rem;
  --spacing-8: 0.5rem;
  --spacing-10: 0.625rem;
  --spacing-12: 0.75rem;
  --spacing-14: 0.875rem;
  --spacing-16: 1rem;
  --spacing-20: 1.25rem;
  --spacing-24: 1.5rem;
  --spacing-28: 1.75rem;
  --spacing-32: 2rem;
}

/* Dark mode — apply class="dark" to <html> or any parent element */
.dark {
  --color-background: oklch(21.3% 0.0063 249.9);
  --color-foreground: oklch(94.5% 0.0140 249.9);
  --color-muted: oklch(82.9% 0.0145 248.0);
  --color-faint: oklch(73.0% 0.0114 248.0);
  --color-surface: oklch(25.4% 0.0070 249.9);
  --color-surface-sunken: oklch(17.6% 0.0056 249.9);
  --color-surface-2: oklch(28.5% 0.0077 249.9);
  --color-surface-raised: oklch(31.7% 0.0077 249.9);
  --color-surface-overlay: oklch(35.5% 0.0077 249.9);
  --color-primary-hover: oklch(56.4% 0.1634 253.9);
  --color-primary-soft: oklch(25.4% 0.0372 253.9);
  --color-secondary: oklch(57.4% 0.1318 268.5);
  --color-secondary-soft: #263050;
  --color-accent: oklch(59.9% 0.2408 302.4);
  --color-border: oklch(28.5% 0.0077 249.9);
  --color-input-border: oklch(55.6% 0.0083 255.6);
  --color-ring-soft: oklch(25.4% 0.0372 253.9);
  --color-secondary-soft-foreground: #ffffff;
  --color-selection: oklch(70.0% 0.1338 250.3 / 0.28);
  --color-disabled-bg: oklch(28.5% 0.0077 249.9);
  --color-disabled-foreground: oklch(73.0% 0.0114 248.0);
  --color-input-error-border: #d6516a;
  --color-input-success-border: #5ccca6;
  --color-input-warning-border: #e4e444;
  --color-success: oklch(76.9% 0.1174 168.2);
  --color-success-soft: oklch(34.7% 0.0359 170.3);
  --color-warning: oklch(89.2% 0.1727 109.4);
  --color-warning-soft: oklch(37.4% 0.0494 108.6);
  --color-danger: oklch(61.8% 0.1675 12.1);
  --color-danger-foreground: #16160c;
  --color-danger-soft: oklch(30.1% 0.0494 8.4);
  --color-info: oklch(64.7% 0.1186 251.5);
  --color-info-foreground: #16160c;
  --color-info-soft: oklch(31.2% 0.0345 252.2);
}
"
`;
